# protel99-to-kicad

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: COORDINATES.md  FORMAT.md
src/protel99_parser/: __init__.py  batch_runner.py  coordinate_decoder.py  footprint_corrections.py  footprint_generator.py  kicad_generator.py  kicad_ground_truth.py  parser.py  pcblib_parser.py  rosetta_stone.py  text11_footprint_lib.py
tests/: test_coordinate_decoder.py  test_footprint_generator.py  test_kicad_generator.py  test_multi_file.py
tools/: gerber_compare.py
